// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render correctly 1`] = `
<DocumentFragment>
  <input
    aria-required="true"
    class="m-form__control--text input"
    data-testid="test"
    id="input"
    name="input"
    placeholder="Test input placeholder"
    required=""
    type="text"
    value="4"
  />
</DocumentFragment>
`;

exports[`Input should render correctly with defaults 1`] = `
<DocumentFragment>
  <input
    class="m-form__control--text"
    id="input"
    name="input"
    placeholder=""
    type="text"
    value=""
  />
</DocumentFragment>
`;
